Setup of the GlobalSettingsRepository.

--- a/source/Drey.Configuration/Views/Home/index.cshtml
+++ b/source/Drey.Configuration/Views/Home/index.cshtml
@@ -1,2 +1,5 @@
 ﻿@inherits NancyRazorViewBase<dynamic>
 <h1>Service Panel</h1>
+
+<p>The following applications are installed in this runtime.</p>
+
