--- a/source/Drey.Configuration/Views/Setup/index.cshtml
+++ b/source/Drey.Configuration/Views/Setup/index.cshtml
@@ -1,7 +1,7 @@
 ﻿@inherits NancyRazorViewBase<Drey.Configuration.Services.ViewModels.GlobalSettingsPmo>
 
 <h1>Global Settings</h1>
-
+@Html.Partial("Shared/ValidationSummary")
 <div class="row">
     <div class="col-md-4 col-md-offset-4 col-xs-12">
         <div class="panel panel-default">
