--- a/source/Drey.Configuration/Views/Shared/ValidationSummary.cshtml
+++ b/source/Drey.Configuration/Views/Shared/ValidationSummary.cshtml
@@ -1,13 +1,14 @@
-﻿@inherits NancyRazorViewBase<dynamic>
-@*IfNot.RenderContext.Context.ModelValidationResult.IsValid
-    errors = Html.RenderContext.Context.ModelValidationResult.Errors.SelectMany(x => x.Value.Select(v => v.ErrorMessage));
+﻿@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<dynamic>
+@if (!Html.RenderContext.Context.ModelValidationResult.IsValid)
+{
+    IEnumerable<string> errors = Html.RenderContext.Context.ModelValidationResult.Errors.SelectMany(x => x.Value.Select(v => v.ErrorMessage));
     <div class="alert alert-danger" role="alert">
         <strong class="clearfix">One or more errors occurred</strong>
         <ul>
             @foreach (string error in errors)
             {
-            <li>@error</li>
+                <li>@error</li>
             }
         </ul>
     </div>
-    }*@
+}
