--- a/source/Drey.Configuration/Views/Applet/appSettingEditor.cshtml
+++ b/source/Drey.Configuration/Views/Applet/appSettingEditor.cshtml
@@ -1,8 +1,8 @@
 ﻿@inherits NancyRazorViewBase<Drey.Configuration.Services.ViewModels.AppSettingPmo>
 @{
+    ViewBag.Title = "Application Settings Editor";
     var faBase = "fa fa-fw fa-3x";
 }
-<h1>Application Setting Editor</h1>
 
 @Html.Partial("Shared/ValidationSummary")
 
@@ -11,11 +11,23 @@
     <input type="hidden" name="Id" value="@Model.Id" />
     <input type="hidden" name="PackageId" value="@Model.PackageId" />
 
-    <label for="Key">Key</label>
-    <input type="text" value="@Model.Key" name="Key" class="form-control" />
+    <div class="form-group">
+        <label for="Key">Key</label>
+        @if (Model.Id != 0)
+        {
+            <input type="hidden" value="@Model.Key" name="Key" />
+            <span class="form-control-static">@Model.Key</span>
+        }
+        else
+        {
+            <input type="text" value="@Model.Key" name="Key" class="form-control" />
+        }
+    </div>
 
-    <label for="Value">Value</label>
-    <input type="text" value="@Model.Value" name="Value" class="form-control" />
+    <div class="form-group">
+        <label for="Value">Value</label>
+        <input type="text" value="@Model.Value" name="Value" class="form-control" />
+    </div>
 
     <div>
         <button type="submit" class="btn btn-primary">Save</button>
