--- a/source/Drey.Configuration/Views/Shared/shell.cshtml
+++ b/source/Drey.Configuration/Views/Shared/shell.cshtml
@@ -4,14 +4,35 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/Content/bootstrap.css" />
     <link rel="stylesheet" href="~/Content/bootstrap-theme.css" />
     <link rel="stylesheet" href="~/Content/font-awesome.min.css" />
 </head>
 <body>
-    <div class="container-fluid">
-        @RenderBody()
+    <div class="container">
+        <h1>@ViewBag.Title</h1>
+
+        <div class="btn-toolbar">
+            <div class="btn-group">
+                <a href="~/" class="btn btn-default" title="Home"><span class="fa fa-fw fa-lg fa-home"></span></a>
+            </div>
+
+            @RenderSection("Buttons", false)
+
+            <div class="btn-group pull-right">
+                <a href="#" class="btn btn-default" title="Change Client Certificate"><span class="fa fa-fw fa-lg fa-key"></span></a>
+                <a href="#" class="btn btn-default" title="Change Server Url"><span class="fa fa-fw fa-lg fa-link"></span></a>
+            </div>
+        </div>
+
+        <div class="well" style="margin-top: 20px;">
+            @RenderBody()
+        </div>
+
+        <div class="footer">
+            Version: @Drey.Configuration.Nut.Version
+        </div>
     </div>
     <script type="text/javascript" src="~/Scripts/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="~/Scripts/bootstrap.js"></script>
