Quick and dirty method to update client certificate(s) and server host name applets will be dependent on.

--- a/source/Drey.Configuration/Views/Shared/shell.cshtml
+++ b/source/Drey.Configuration/Views/Shared/shell.cshtml
@@ -21,8 +21,8 @@
             @RenderSection("Buttons", false)
 
             <div class="btn-group pull-right">
-                <a href="#" class="btn btn-default" title="Change Client Certificate"><span class="fa fa-fw fa-lg fa-key"></span></a>
-                <a href="#" class="btn btn-default" title="Change Server Url"><span class="fa fa-fw fa-lg fa-link"></span></a>
+                <a href="~/Setup/ClientCertificate" class="btn btn-default" title="Change Client Certificate"><span class="fa fa-fw fa-lg fa-key"></span></a>
+                <a href="~/Setup/ServerUrl" class="btn btn-default" title="Change Server Url"><span class="fa fa-fw fa-lg fa-link"></span></a>
             </div>
         </div>
 
