refactor and moving environment monitoring code from S3

--- a/source/Drey.Configuration/Views/Shared/shell.cshtml
+++ b/source/Drey.Configuration/Views/Shared/shell.cshtml
@@ -31,7 +31,9 @@
         </div>
 
         <div class="footer">
-            Version: @Drey.Configuration.Nut.Version
+            <span>
+                Version: @Drey.Configuration.Nut.Version
+            </span>
         </div>
     </div>
     <script type="text/javascript" src="~/Scripts/jquery-2.1.4.min.js"></script>
