Resolutions to fix issues with multiple instances of an app being created in certain circumstances.

--- a/source/Drey.Configuration/Views/Shared/shell.cshtml
+++ b/source/Drey.Configuration/Views/Shared/shell.cshtml
@@ -16,6 +16,7 @@
         <div class="btn-toolbar">
             <div class="btn-group">
                 <a href="~/" class="btn btn-default" title="Home"><span class="fa fa-fw fa-lg fa-home"></span></a>
+                <a href="~/recycle" class="btn btn-default" title="Restart Application"><span class="fa fa-fw fa-lg fa-refresh"></span></a>
             </div>
 
             @RenderSection("Buttons", false)
