Updated screens to timeout after 15 seconds, then refresh to ~/ on the console app.

--- a/source/Drey.Configuration/Views/Shared/shell.cshtml
+++ b/source/Drey.Configuration/Views/Shared/shell.cshtml
@@ -4,6 +4,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    @RenderSection("MetaTags", false)
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/Content/bootstrap.css" />
     <link rel="stylesheet" href="~/Content/bootstrap-theme.css" />
