Resolved redirect issues, configured all modules to inherit from a base module for code reuse.

--- a/source/Drey.Configuration/Views/Home/recyclepending.cshtml
+++ b/source/Drey.Configuration/Views/Home/recyclepending.cshtml
@@ -42,7 +42,7 @@
 
                 if (timeoutInSeconds === 0) {
                     clearInterval(timeoutId);
-                    window.location.reload('/');
+                    window.location = "/";
                 } else {
                     updateDisplay();
                 }
