- Removed the EnableShutdown method.  - Updated AppSetting editor to use a TextArea to preserve xml formatting.  - Updated output path to remove a comma from the output.  sqlite won't work with commas in the path to the *.db3 file.

--- a/source/Drey.Configuration/Views/Applet/appSettingEditor.cshtml
+++ b/source/Drey.Configuration/Views/Applet/appSettingEditor.cshtml
@@ -26,7 +26,7 @@
 
     <div class="form-group">
         <label for="Value">Value</label>
-        <input type="text" value="@Model.Value" name="Value" class="form-control" />
+        <textarea class="form-control" rows="7" name="Value">@Model.Value</textarea>
     </div>
 
     <div>
