UI layout changes.

--- a/source/Drey.Configuration/Views/Applet/appSettingEditor.cshtml
+++ b/source/Drey.Configuration/Views/Applet/appSettingEditor.cshtml
@@ -1,6 +1,7 @@
 ﻿@inherits NancyRazorViewBase<Drey.Configuration.Services.ViewModels.AppSettingPmo>
 @{
     ViewBag.Title = "Application Settings Editor";
+    ViewBag.Subtitle = Model.PackageId;
     var faBase = "fa fa-fw fa-3x";
 }
 
