--- a/source/Drey.Configuration/Views/Applet/connStringEditor.cshtml
+++ b/source/Drey.Configuration/Views/Applet/connStringEditor.cshtml
@@ -1,6 +1,7 @@
 ﻿@inherits NancyRazorViewBase<Drey.Configuration.Services.ViewModels.ConnectionStringPmo>
 @{
     ViewBag.Title = "Connection String Editor";
+    ViewBag.Subtitle = Model.PackageId;
     var faBase = "fa fa-fw fa-3x";
 }
 
