--- a/source/Drey.Configuration/Views/Setup/index.cshtml
+++ b/source/Drey.Configuration/Views/Setup/index.cshtml
@@ -4,7 +4,7 @@
 }
 @Html.Partial("Shared/ValidationSummary")
 <div class="row">
-    <div class="col-md-4 col-md-offset-4 col-xs-12">
+    <div class="col-md-6 col-md-offset-3 col-xs-12">
         <div class="panel panel-default">
             <div class="panel-heading">Global Settings</div>
             <div class="panel-body">
@@ -14,7 +14,16 @@
                         <input name="ServerHostname" class="form-control" value="@Model.ServerHostname" />
                     </div>
                     <div class="form-group">
-                        <label for="SSLPfx">SSL Certificate</label>
+                        <label for="SSLThumbprint">Self-Signed SSL Certificate thumbprint</label>
+                        <input name="SSLThumbprint" class="form-control" value="@Model.SSLThumbprint" />
+                        <p class="help-block">
+                            If your setup instructions dictate that the <strong>server</strong> you will be connecting to is
+                            using a self-signed certificate, provide the thumbprint within the instructions here.  Otherwise,
+                            leave this blank and only CA-issued certificates will be trusted.
+                        </p>
+                    </div>
+                    <div class="form-group">
+                        <label for="SSLPfx">Client Certificate</label>
                         <input type="file" name="SSLPfx" class="form-control" />
                     </div>
                     <div>
